...
                Ваш результат: \(correctAnswers)/\(questionsAmount)
                Количество сыграных квизов: \(statisticService.totalGamesCount)
                Рекорд: \(bestGame.correctAnswersCount)/\(bestGame.totalAnswersCount) (\(bestGame.date.dateTimeString))
                Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
            """
            let result = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: alertMessage,
                buttonText: "Сыграть еще раз"
            )
            viewController?.show(quiz: result)
        } else {
            switchToNextQuestion()
...
